@@ -557,7 +557,35 @@ block|}
 block|}
 name|ResolvedResource
 name|found
-init|=
+decl_stmt|;
+if|if
+condition|(
+name|rress
+operator|.
+name|length
+operator|==
+literal|1
+condition|)
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"only one resource found: no need to use latest strategy"
+argument_list|)
+expr_stmt|;
+name|found
+operator|=
+name|rress
+index|[
+literal|0
+index|]
+expr_stmt|;
+block|}
+else|else
+block|{
+name|found
+operator|=
 operator|(
 name|ResolvedResource
 operator|)
@@ -569,7 +597,8 @@ name|rress
 argument_list|,
 name|date
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|found
