@@ -155,6 +155,20 @@ name|jayasoft
 operator|.
 name|ivy
 operator|.
+name|repository
+operator|.
+name|Resource
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
 name|util
 operator|.
 name|IvyPatternHelper
@@ -1171,6 +1185,90 @@ return|;
 block|}
 else|else
 block|{
+comment|// maybe the partially resolved pattern is completely resolved ?
+try|try
+block|{
+name|Resource
+name|res
+init|=
+name|rep
+operator|.
+name|getResource
+argument_list|(
+name|partiallyResolvedPattern
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|res
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"\tonly one resource found without real listing: using and defining it as working@"
+operator|+
+name|rep
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" revision: "
+operator|+
+name|res
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+operator|new
+name|ResolvedResource
+index|[]
+block|{
+operator|new
+name|ResolvedResource
+argument_list|(
+name|res
+argument_list|,
+literal|"working@"
+operator|+
+name|rep
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+block|}
+return|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"\timpossible to get resource from name listed by repository: "
+operator|+
+name|partiallyResolvedPattern
+operator|+
+literal|": "
+operator|+
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|Message
 operator|.
 name|debug
